<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_check_notifications"
        android:title="@string/menu_check_notifications"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_realtime"
        android:title="@string/menu_realtime"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_battery"
        android:title="@string/menu_battery"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_notification_help"
        android:title="@string/menu_notification_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_change_server"
        android:title="@string/menu_change_server"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_clear_cache"
        android:title="@string/menu_clear_cache"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />

</menu>
